Add:フラッシュメッセージを追加

--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -8,8 +8,16 @@ ja:
       title: 'ユーザー登録'
       to_login_page: 'ログインページへ'
       submit: '登録する'
+    create:
+      success: 'ユーザー登録が完了しました'
+      fail: 'ユーザー登録に失敗しました'
   user_sessions:
     new:
       title: 'ログイン'
       to_register_page: '登録ページへ'
       password_forget: 'パスワードをお忘れの方はこちら'
+    create:
+      success: 'ログインしました'
+      fail: 'ログインに失敗しました'
+    destroy:
+      success: 'ログアウトしました'
