Fix:誤字の修正

--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -49,7 +49,7 @@ ja:
       back_check: '更新内容は保存されません。マイページにもどりますか？'
     update:
       success: 'プロフィールを更新しました'
-      fail: 'プロフィールを更新に失敗しました'
+      fail: 'プロフィールの更新に失敗しました'
   posts:
     index:
       title: 'みんなのオコゴト'
