--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -10,6 +10,7 @@ ja:
     submit: '登録する'
     previous: '前のページへ'
     next: '次のページへ'
+    not_authorized: '権限がありません'
   time:
     formats:
       default: '%Y/%m/%d %H:%M:%S'
