--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -10,7 +10,7 @@ ja:
     submit: '登録する'
     previous: '前のページへ'
     next: '次のページへ'
-    not_authorized: '権限がありません'
+    not_authorized: '管理者権限がありません'
   time:
     formats:
       default: '%Y/%m/%d %H:%M:%S'
@@ -30,7 +30,6 @@ ja:
       fail: 'ユーザー登録に失敗しました'
   user_sessions:
     new:
-      title: 'ログイン'
       create_user: '新しくアカウントを作成する'
       to_register_page: '登録ページへ'
       password_forget: 'パスワードをお忘れですか？'
@@ -100,3 +99,14 @@ ja:
     update:
       success: 'パスワードを変更しました'
       fail: 'パスワードの変更に失敗しました'
+  admin:
+    user_sessions:
+      new:
+        title: '管理者ログイン'
+        not_admin: '管理者ではない方はこちらから'
+        not_admin_login: '通常ログインページへ'
+      create:
+        success: '管理者としてログインしました'
+        fail: 'ログインに失敗しました'
+      destroy:
+        success: 'ログアウトしました。アップデート頑張れよ〜〜！'
