Add:タグ一覧とタグの追加・削除機能を追加

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -20,6 +20,8 @@ ja:
         kogoto_image: 'オコゴト画像'
         id: 'ID'
         created_at: '作成日時'
+      tag:
+        situation: '状況'
   activemodel:
     models:
       okogoto_image: 'オコゴト画像'
