Fix:マイページから投稿詳細に遷移したときは、マイページに戻るようにする

--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -79,6 +79,7 @@ ja:
       delete: '投稿を削除する'
       delete_check: '投稿を削除しますか？'
       back_before_page: 'みんなのオコゴトへもどる'
+      back_before_mypage: 'マイページへもどる'
     destroy:
       success: '投稿を削除しました'
   okogoto_images:
