Add:独り言風背景を追加

--- a/config/locales/view/ja.yml
+++ b/config/locales/view/ja.yml
@@ -93,6 +93,7 @@ ja:
       kakugen: 'まるで格言な雰囲気'
       kogoto: 'まるで小言な雰囲気'
       friends: 'まるで友達からの応援な雰囲気'
+      hitorigoto: 'まるでたそがれどきの独り言な雰囲気'
       submit: 'オコゴト画像を作成する'
     create:
       success: 'オコゴト画像を作成して投稿しました！オコゴト画像について教えてくれませんか？'
